# znga

./: CMakeLists.txt  Noise.md  README.md
inc/: znga.h  znga_cube.h  znga_shader.h
include/: BlockInfo.h  Collision.h  Cube.h  Mesh.h  Model.h  Noise.h  Shader.h  Simplex.h  Terrain.h  Texture.h  Util.h  World.h  common.h  linmath.h  rnd.h  stb_perlin.h  znga_cube.h  znga_mesh.h  znga_model.h  znga_shader.h  znga_terrain.h  znga_texture.h
models/: cube.mtl
shaders/: basic.frag  basic.vert  cube.frag  cube.vert  flat.frag  flat.vert
source/: Cube.cpp  Mesh.cpp  Model.cpp  Shader.cpp  Terrain.cpp  Texture.cpp  World.cpp  json11.cpp  main.c  main.cpp  noise.cpp  znga_mesh.c  znga_mesh.cpp  znga_model.c  znga_model.cpp  znga_shader.c  znga_shader.cpp  znga_terrain.c  znga_terrain.cpp  znga_texture.c  znga_texture.cpp
src/: main.cpp  znga_cube.cpp  znga_mesh.cpp
textures/: TextureAtlas.tps  test.json
